@@ -61,7 +61,7 @@
     <junit.jupiter.version>5.3.1</junit.jupiter.version>
     <junit.platform.version>1.3.1</junit.platform.version>
   </properties>
-  
+
   <build>
     <pluginManagement>
       <plugins>
@@ -308,7 +308,7 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-javadoc-plugin</artifactId>
               <configuration>
-                <additionalOptions>-html5 --add-modules java.xml.ws.annotation</additionalOptions>
+                <additionalOptions>-html5</additionalOptions>
               </configuration>
             </plugin>
           </plugins>
@@ -407,6 +407,21 @@
           </plugins>
         </pluginManagement>
       </build>
+    </profile>
+
+    <profile>
+      <id>jdk9on</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <dependencies>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+            <scope>compile</scope>
+        </dependency>
+      </dependencies>
     </profile>
   </profiles>
 
